# platform_SDR

./: CMakeLists.txt  unittest.cmake
include/platform_SDR/: board.h  platform.h  receiver.h  transfercontrol.h  transferparams.h
source/: board.cpp  platform.cpp  receiver.cpp  tranfercontrol.cpp  tranferparams.cpp
test/: PlatformSDRTest.cpp  Test.cpp
